# armv6-m_bare_metal_s

./: .gitignore  CMakeLists.txt  Makefile  Readme.md  arm-none-eabi-toolchain.cmake  flash.ld  main.s
